name:                server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable accept-server
  hs-source-dirs:      src/
  main-is:             Accept.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , network >= 2.6 && < 2.7
  default-language:    Haskell2010

executable naive-loop-server
  hs-source-dirs:      src/
  main-is:             NaiveLoop.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , network >= 2.6 && < 2.7
  default-language:    Haskell2010

executable process-per-connection
  hs-source-dirs:      src/
  main-is:             ProcessPerConnection.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , network >= 2.6 && < 2.7
    , unix >= 2.7 && < 2.8
  default-language:    Haskell2010

executable read-server
  hs-source-dirs:      src/
  main-is:             Read.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , network >= 2.6 && < 2.7
  default-language:    Haskell2010
